--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "swr": "^2.1.5",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.2.0"
   }
 }
